# fetrust

./: .gitignore  Cargo.toml  Makefile  README.md  justfile  patch.patch
.github/workflows/: release.yml  rust.yml
src/: default-figlet.font.flf  default.config.json  ekhizmet.rs  extra_fn.rs  ini_parser.rs  kynk.rs  main.rs  reading.rs  resource.rs
