[package]
name = "fetrust"
version = "0.1.5"
edition = "2021"
description = "fetchtool in rust"
categories = ["os","fetching","system","device"]
license = "GPL-3.0"

[profile.release]
strip = true
opt-level = 3
lto = true
debug = false
codegen-units = 1

[dependencies]
figlet-rs = "0.1.4"
ansi_term = "0.12.1"
tinyrand = "0.5"
tinyrand-std = "0.5"
another_json_minimal = "0.0.2"
cuptime_parser = "0.1.0"
